# Cardio

./: .clang-format  .clang-tidy  .gitignore  .swp  CI_SETUP_SUMMARY.md  CODE_REVIEW.md  MEMORY_LEAK_FIX_REPORT.md  Makefile  PROTOCOL.md  README.md  REPORT.md  docker-compose.yaml  shell.nix
.github/agents/: autorun.agent.md
.github/workflows/: ci.yml
backend/: CMakeLists.txt  build_all.sh  clean_build.sh  run_integration_tests.sh
backend/include/: game.h  generic_map.h  main.h  protocol.h  server.h  test.h
backend/lib/card/: CMakeLists.txt
backend/lib/card/src/: card.c
backend/lib/db/: CMakeLists.txt  test_password_hash
backend/lib/db/include/: db.h
backend/lib/db/src/: MessagePack.c  connection.c  data_test.sql  database_connect  login.c  main.c  password_hash.c  player.c  signup.c  user.c
backend/lib/db/test/: test_auth_flow.c  test_password_hash.c  unit_test.c
backend/lib/logger/: CMakeLists.txt
backend/lib/logger/include/: logger.h
backend/lib/logger/src/: logger.c
backend/lib/logger/test/: unit_tests.c
backend/lib/mpack/: CMakeLists.txt
backend/lib/mpack/include/: mpack.h
backend/lib/mpack/src/: mpack.c
backend/lib/pokergame/: CMakeLists.txt  README.md
backend/lib/pokergame/include/: game_engine.h  pokergame.h
backend/lib/pokergame/src/: game_engine.c  hand.c  mcadvisor.c  player.c  pokergame.c
backend/lib/pokergame/test/: game_engine_test.c  mctest.c
backend/src/: decoder.c  encoder.c  game_room.c  handler.c  main.c  map.c  protocol.c  server.c  utils.c
backend/test/: client.c  integration_test.c  test.c  unit_test.c
database/: MIGRATION_GUIDE.md  README.md  data.sql  migrate_passwords  migrate_passwords.c  migration_hash_passwords.sql  run_migration.sh  schemas.sql
docs/: GAME_IMPLEMENTATION_NOTES.md  IMPLEMENTATION.md  PROTOCOL.md  QUICK_REFERENCE.md  SECURITY_UPGRADE.md  STATUS_AND_TODO.md  SUMMARY.md  TESTING.md
poker-client/: .env.example  .gitignore  PROTOCOL_IMPLEMENTATION.md  README.md  Untitled  dev-app-update.yml  electron-builder.yml  electron.vite.config.ts  package.json
poker-client/src/main/: index.ts
poker-client/src/renderer/src/: App.tsx
poker-client/src/renderer/src/assets/: App.css  Poker.css  TableInviteNotification.css  app.css  friends.css  globals.css  home.css  index.css  lobby.css  login.css  navigation.css  tables.css  user-profile.css
poker-client/src/renderer/src/components/: ConnectionStatus.tsx  HandResult.tsx  Navigation.tsx  Spinner.tsx  TableInviteNotification.tsx  UserProfileDropdown.tsx  WinScreen.tsx
poker-client/src/renderer/src/components/card/: Card.tsx  HiddenCard.tsx
poker-client/src/renderer/src/components/icons/: HomeIcons.tsx
poker-client/src/renderer/src/components/slider/: Handle.tsx  Track.tsx  types.ts
poker-client/src/renderer/src/config/: server.ts
poker-client/src/renderer/src/contexts/: AuthContext.tsx
poker-client/src/renderer/src/data/: mockTables.ts  mockUsers.ts
poker-client/src/renderer/src/pages/: FriendsPage.tsx  GamePage.tsx  HomePage.tsx  LoginPage.tsx  SignupPage.tsx  Spinner.js  TablesPage.tsx  WinScreen.js
poker-client/src/renderer/src/services/auth/: AuthService.ts  index.ts
poker-client/src/renderer/src/services/friend/: FriendService.ts  index.ts
poker-client/src/renderer/src/services/game/: GameService.ts  index.ts
poker-client/src/renderer/src/services/network/: HeartbeatService.ts  TcpClient.ts  index.ts
poker-client/src/renderer/src/services/protocol/: codec.ts  constants.ts  index.ts  types.ts
poker-client/src/renderer/src/services/table/: LeaveTableService.ts  TableInviteService.ts
poker-client/src/renderer/src/services/tables/: TablesService.ts
poker-client/src/renderer/src/types/: index.ts
poker-client/src/renderer/src/utils/: bet.ts  cardEncoding.ts  cards.ts  gameLogic.ts  gameStateConverter.ts  players.ts  ui.tsx
scripts/: format-and-tidy.sh
server/: CMakeLists.txt  FRIEND_MANAGEMENT.md  build_all.sh  clean_build.sh  run_integration_tests.sh
server/include/: game.h  main.h  protocol.h  server.h
server/lib/card/: CMakeLists.txt
server/lib/card/include/: card.h
server/lib/card/src/: card.c  deck.c
server/lib/card/test/: unit_tests.c
server/lib/db/: CMakeLists.txt
server/lib/db/include/: db.h
server/lib/db/src/: balance.c  friend.c  login.c  password_hash.c  signup.c  user.c
server/lib/db/test/: unit_test.c
server/lib/logger/: CMakeLists.txt
server/lib/mpack/: CMakeLists.txt
server/lib/pokergame/: CMakeLists.txt  README.md
server/lib/pokergame/include/: game_engine.h
server/lib/pokergame/src/: game_engine.c  hand.c
server/lib/pokergame/test/: game_engine_test.c  unit_tests.c
server/lib/utils/: testing.h
server/src/: game_room.c  handler.c  main.c  protocol.c  protocol_game.c  server.c  utils.c
server/test/: e2e_action_signed_seq_test.c  e2e_friend_test.c  e2e_multiplayer_test.c  e2e_new_features_test.c  e2e_table_invite_test.c  e2e_test_client.c  integration_test.c  test_invite_db_fix.c  test_invite_rejection_fix.c  test_normal_invite.c  unit_test.c
